# flutter_windows_webview

./: .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_windows_webview.dart  flutter_windows_webview_method_channel.dart  flutter_windows_webview_platform_interface.dart
lib/src/: webview.dart  webview_options.dart
test/: flutter_windows_webview_method_channel_test.dart  flutter_windows_webview_test.dart
windows/: .gitignore  CMakeLists.txt  eventChannel.cpp  eventChannel.h  flutter_windows_webview_plugin.cpp  flutter_windows_webview_plugin.h  flutter_windows_webview_plugin_c_api.cpp  utils.cpp  utils.h  webview.cpp  webview.h
windows/include/flutter_windows_webview/: flutter_windows_webview_plugin_c_api.h
windows/test/: flutter_windows_webview_plugin_test.cpp
